fixed layout in one and two column components for spacing/display

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,11 +5,6 @@ body {
     margin: 0px;
 }
 
-.main {   
-    display: inline-block;
-    overflow: scroll;
-}
-
 .alert {
     background-color: #ff4545;
     margin: 50px;
